--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,11 @@
+<div id="page"></div>
+
+
+
 <div id="out"></div>
 <div id="log"></div>
 
-<div id="page"></div>
+
 
 <script>
   $('#page').pages({
@@ -22,7 +26,7 @@
   var controller = new Leap.Controller({enableGestures: true});
   controller.loop(function(frame) {
     latestFrame = frame;
-    document.getElementById('out').innerHTML = (pausedFrame ? "<p><b>PAUSED</b></p>" : "") + "<div>"+(pausedFrame || latestFrame).dump()+"</div>";
+    // document.getElementById('out').innerHTML = (pausedFrame ? "<p><b>PAUSED</b></p>" : "") + "<div>"+(pausedFrame || latestFrame).dump()+"</div>";
   });
   controller.on('ready', function() {
     console.log("ready");
