--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -23,10 +23,53 @@
       }
     }
   };
+
+  var handleGestures = function (gestures){
+
+    // var gesture = frame.gestures[i];
+    $.each(gestures, function( index, gesture ) {
+      // console.log( index + ": " + value);
+
+      if (gesture.type == "swipe") {;
+        //Classify swipe as either horizontal or vertical
+        var isHorizontal = Math.abs(gesture.direction[0]) > Math.abs(gesture.direction[1]);
+        //Classify as right-left or up-down
+        if(isHorizontal){
+          swipeDirection = (gesture.direction[0] > 0) ? 'right' : 'left';
+          
+
+          if(gesture.direction[0] > 0){
+              swipeDirection = "right";
+              $('#page').nextPage();
+          } else {
+              swipeDirection = "left";
+              $('#page').prevPage();
+          }
+        } else { //vertical
+            if(gesture.direction[1] > 0){
+                swipeDirection = "up";
+            } else {
+                swipeDirection = "down";
+            }                  
+        }
+       }
+
+    });
+
+    
+
+          
+
+  }
+
   var controller = new Leap.Controller({enableGestures: true});
   controller.loop(function(frame) {
     latestFrame = frame;
     // document.getElementById('out').innerHTML = (pausedFrame ? "<p><b>PAUSED</b></p>" : "") + "<div>"+(pausedFrame || latestFrame).dump()+"</div>";
+
+    if(latestFrame.gestures.length){
+      handleGestures(latestFrame.gestures);
+    }
   });
   controller.on('ready', function() {
     console.log("ready");
@@ -49,5 +92,7 @@
   controller.on('deviceDisconnected', function() {
     console.log("deviceDisconnected");
   });
+
+
 
 </script>
