--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,52 @@
+<style type="text/css">
+    html, body {
+        height:100%;
+    }
+    .grabbale {
+        display: inline-block;
+        padding:150px;
+        background-color: lightpink;
+        position: absolute;
+        min-width: 100px;
+        text-align: center;
+        font-size: 2em;
+    }
+
+    .grabbale.hover {
+        background-color: lightblue;
+    }
+
+    .grabbale.grabbed {
+        background-color: orange;
+    }
+</style>
+
+
+
+<hr/>
+
+
 <div id="page"></div>
+
+
+
+
+
+<hr/>
+
+<div class="button leap-interactive">Click Me</div>
+<div class="button leap-interactive">Click Me</div>
+<div class="button leap-interactive">Click Me</div>
+<div class="button leap-interactive">Click Me</div>
+<div class="button leap-interactive">Click Me</div>
+<div class="output"></div>
+
+
+<hr/>
+
+
+
+<div class="grabbale leap-interactive" leap-disable-tap="true">GRAB ME</div>
 
 
 
@@ -6,19 +54,12 @@
 <div id="log"></div>
 
 
-<div class="button leap-interactive">Click Me</div>
-<div class="button leap-interactive">Click Me</div>
-<div class="button leap-interactive">Click Me</div>
-<div class="button leap-interactive">Click Me</div>
-<div class="button leap-interactive">Click Me</div>
-
-
-<div class="output"></div>
-
 <script>
   $('#page').pages({
     'sourceUrl': 'http://localhost:3000/assets/sample.json'
   });
+
+  //---------------------
 
   var buttons = document.querySelectorAll("div.button");
   var output  = document.querySelector("div.output");
@@ -30,6 +71,37 @@
           count++;
       });
   };
+
+
+
+  //---------------------
+  var grabbale = document.querySelector("div.grabbale");
+
+  grabbale.addEventListener("leap-hand-grab", function(e){
+      if(e.state === "grab") {
+          // nothing to do here, but maybe you need to?
+          console.log("grabbed");
+      } else if(e.state === "release") {
+          // nothing to do here, but maybe you need to?
+          console.log("release");
+      } else if(e.state === "move") {
+          grabbale.style.left = e.x - (grabbale.offsetWidth/2)+ "px";
+          grabbale.style.top = e.y - (grabbale.offsetHeight/2)+ "px";
+      }
+  });
+
+  LeapManager.init({
+      maxCursors: 2,
+      useHands: true
+  });
+
+  window.onload = function() {
+      grabbale.style.left = (document.body.offsetWidth/2) - (grabbale.offsetWidth/2)+ "px";
+      grabbale.style.top = (document.body.offsetHeight/2) - (grabbale.offsetHeight/2)+ "px";
+  }
+  //---------------------
+
+
 
 
   var pausedFrame = null;
