--- a/app/views/pages/click.html.erb
+++ b/app/views/pages/click.html.erb
@@ -16,6 +16,16 @@
 <div id="out"></div>
 <div id="log"></div>
 
+<script type="text/javascript">
+$(document).ready(function(){
+  var metrics = new Metrics({
+    container: ".metrics",
+    data: $.parseJSON(<%= raw @metric.data.to_json %>)
+  }).render();
+});
+
+</script>
+
 
 <script>
   
