--- a/app/views/pages/swipe.html.erb
+++ b/app/views/pages/swipe.html.erb
@@ -9,80 +9,10 @@
 
   $(document).ready(function(){
     var pages = new Pages({
-      sourceUrl: 'http://localhost:3000/assets/sample.json',
+      sourceUrl: 'http://localhost:3000/assets/sample2.json',
       selector: '#page'
     });
   });
-
-  // $('#page').pages({
-  //   '
-  // });
-
-  // var pausedFrame = null;
-  // var latestFrame = null;
-  // window.onkeypress = function(e) {
-  //   if (e.charCode == 32) {
-  //     if (pausedFrame == null) {
-  //       pausedFrame = latestFrame;
-  //     } else {
-  //       pausedFrame = null;
-  //     }
-  //   }
-  // };
-
-  // var handleGestures = function (gestures){
-
-  //   $.each(gestures, function( index, gesture ) {
-
-  //     if (gesture.type == "swipe") {;
-  //       //Classify swipe as either horizontal or vertical
-  //       var isHorizontal = Math.abs(gesture.direction[0]) > Math.abs(gesture.direction[1]);
-  //       //Classify as right-left or up-down
-  //       if(isHorizontal){
-  //         if(gesture.direction[0] > 0){
-  //           swipeDirection = "right";
-  //           $('#page').prevPage();
-  //         } else {
-  //           swipeDirection = "left";
-  //           $('#page').nextPage();
-            
-  //         }
-  //       }
-  //     }
-
-  //   });
-  // };
-
-  // var controller = new Leap.Controller({enableGestures: true});
-  // controller.loop(function(frame) {
-  //   latestFrame = frame;
-  //   // document.getElementById('out').innerHTML = (pausedFrame ? "<p><b>PAUSED</b></p>" : "") + "<div>"+(pausedFrame || latestFrame).dump()+"</div>";
-
-  //   if(latestFrame.gestures.length){
-  //     handleGestures(latestFrame.gestures);
-  //   }
-  // });
-  // controller.on('ready', function() {
-  //   console.log("ready");
-  // });
-  // controller.on('connect', function() {
-  //   console.log("connect");
-  // });
-  // controller.on('disconnect', function() {
-  //   console.log("disconnect");
-  // });
-  // controller.on('focus', function() {
-  //   console.log("focus");
-  // });
-  // controller.on('blur', function() {
-  //   console.log("blur");
-  // });
-  // controller.on('deviceConnected', function() {
-  //   console.log("deviceConnected");
-  // });
-  // controller.on('deviceDisconnected', function() {
-  //   console.log("deviceDisconnected");
-  // });
 
 
 </script>
