working on defining custom event handler

--- a/app/views/pages/swipe.html.erb
+++ b/app/views/pages/swipe.html.erb
@@ -5,14 +5,5 @@
 <div id="log"></div>
 
 
-<script>
 
-  $(document).ready(function(){
-    var pages = new Pages({
-      sourceUrl: 'http://localhost:3000/assets/sample2.json',
-      selector: '#page'
-    });
-  });
-
-
-</script>
+<%= javascript_include_tag 'sample' %>
