--- a/templates/test-colors.html
+++ b/templates/test-colors.html
@@ -14,16 +14,16 @@
    </tr>
    <tr>
      <td>???</td>
-     <div class="button leap-interactive" style="background-color:red;"></div>
+     <td><div class="button leap-interactive" style="background-color:red;"><br/><br/><br/></div></td>
    </tr>
    <tr>
      <td>???</td>
-     <div class="button leap-interactive" style="background-color:green;"></div>
+     <td><div class="button leap-interactive" style="background-color:green;"><br/><br/><br/></div></td>
    </tr>
    <tr>
      <td>???</td>
      <td>
-       <div class="button leap-interactive" style="background-color:blue;"></div>
+       <div class="button leap-interactive" style="background-color:blue;"><br/><br/><br/></div>
      </td>
    </tr>
   </table>
