going to delete old json books

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,10 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+  <div id = "alerts"></div>
+  <%= yield %>
+</div>
 
 </body>
 </html>
