--- a/app/views/pages/colors.html.erb
+++ b/app/views/pages/colors.html.erb
@@ -6,10 +6,6 @@
 
 
 
-<%= javascript_include_tag 'colors' %>
-
-
-
 
 <script>
 
@@ -23,7 +19,7 @@ var book = {
 
 var gestureHandler = {
   swipeLeft : {
-    "kda": { action: function(){ alert("Done studying? We are going to test you now, so be sure!!") } }
+    "kda": { action: function(){ Pages.alert('warning', "Done studying? We are going to test you now, so be sure!!") } }
   },
   click : {
     "kdb": [
