removed duplicate books

--- a/app/views/pages/colors.html.erb
+++ b/app/views/pages/colors.html.erb
@@ -19,7 +19,7 @@ var book = {
 
 var gestureHandler = {
   swipeLeft : {
-    "kda": { action: function(){ Pages.alert('warning', "Done studying? We are going to test you now, so be sure!!") } }
+    "kda": { action: function(){ Pages.alert('warning', "Done studying? We are going to test you now, so be sure!!"); } }
   },
   click : {
     "kdb": [
