--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,19 +12,12 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="http://getbootstrap.com/examples/sticky-footer-navbar/#">Home</a></li>
         <li><a href="http://getbootstrap.com/examples/sticky-footer-navbar/#about">About</a></li>
-        <li><a href="http://getbootstrap.com/examples/sticky-footer-navbar/#contact">Contact</a></li>
         <li class="dropdown">
-          <a href="http://getbootstrap.com/examples/sticky-footer-navbar/#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+          <a href="http://getbootstrap.com/examples/sticky-footer-navbar/#" class="dropdown-toggle" data-toggle="dropdown">Books <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="http://getbootstrap.com/examples/sticky-footer-navbar/#">Action</a></li>
-            <li><a href="http://getbootstrap.com/examples/sticky-footer-navbar/#">Another action</a></li>
-            <li><a href="http://getbootstrap.com/examples/sticky-footer-navbar/#">Something else here</a></li>
-            <li class="divider"></li>
-            <li class="dropdown-header">Nav header</li>
-            <li><a href="http://getbootstrap.com/examples/sticky-footer-navbar/#">Separated link</a></li>
-            <li><a href="http://getbootstrap.com/examples/sticky-footer-navbar/#">One more separated link</a></li>
+            <li><a href="/pages/sample">Sample</a></li>
+            <li><a href="/pages/colors">Colors</a></li>
           </ul>
         </li>
       </ul>
