got footer to render

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,8 @@
 <div id="footer">
   <div class="container">
-    <p class="text-muted">Place sticky footer content here.</p>
+    <h5>
+      <span>©<%= Time.now.year %> Pages</span>
+      <span class="pull-right" id="page_number"></span>
+    </h5>
   </div>
 </div>
