--- a/app/views/pages/colors.html.erb
+++ b/app/views/pages/colors.html.erb
@@ -30,13 +30,19 @@ var gestureHandler = {
   }
 };
 
-var pages = new Pages({
-  source: book,
-  // start: 1,
-  handlers: gestureHandler,
-  selector: '#page',
-  // log: true
+
+$(document).ready(function(){
+
+  var pages = new Pages({
+    source: book,
+    // start: 1,
+    handlers: gestureHandler,
+    selector: '#page',
+    // log: true
+  });
+    
 });
+
 
 
 </script>
