--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="http://getbootstrap.com/examples/sticky-footer-navbar/#about">About</a></li>
+        <li><%= link_to 'About', about_path %></li>
         <li class="dropdown">
           <a href="http://getbootstrap.com/examples/sticky-footer-navbar/#" class="dropdown-toggle" data-toggle="dropdown">Books <b class="caret"></b></a>
           <ul class="dropdown-menu">
