--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -1,3 +1,3 @@
 <div class="page-header">
-  <h1>Pages <small>Interactive Books</small></h1>
+  <h1>Pages <small>Interactive Books for Kids</small></h1>
 </div>
