--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to 'About', about_path %></li>
         <li class="dropdown">
-          <a href="http://getbootstrap.com/examples/sticky-footer-navbar/#" class="dropdown-toggle" data-toggle="dropdown">Books <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Books <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="/pages/sample">Sample</a></li>
             <li><a href="/pages/colors">Colors</a></li>
