--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,7 @@
           <ul class="dropdown-menu">
             <li><a href="/pages/sample">Sample</a></li>
             <li><a href="/pages/colors">Colors</a></li>
+            <li><a href="/pages/add_sub">Addition and Subtraction</a></li>
           </ul>
         </li>
       </ul>
